--- a/src/components/SelectPartyPage/SelectPartyPage.css
+++ b/src/components/SelectPartyPage/SelectPartyPage.css
@@ -1,3 +1,10 @@
-.contained {
-    text-transform: lowercase !important;
-  }
+/* .PartyNameButton {
+    text-transform: none;
+    background-color: blueviolet;
+  } */
+/* 
+Button {
+  text-transform: none;
+  background-color: blueviolet;
+
+} */
