--- a/src/components/AddMealsPage/AddMealsPage.css
+++ b/src/components/AddMealsPage/AddMealsPage.css
@@ -3,4 +3,15 @@
 
 h2, p {
   font-family: 'Roboto', sans-serif;
+  margin: 15px;
+  text-align: center;
+}
+
+.inputsDiv {
+  margin-left: 24%;
+  margin-bottom: 15px;
+}
+
+.backAndSubmitButtons {
+  margin-left: 25%;
 }
