--- a/src/components/AddMealsPage/AddMealsPage.css
+++ b/src/components/AddMealsPage/AddMealsPage.css
@@ -8,10 +8,23 @@ h2, #mealsParagraph {
 }
 
 .inputsDiv {
-  margin-left: 24%;
   margin-bottom: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.backAndSubmitButtons {
-  margin-left: 25%;
+.buttonsDiv {
+  display: flex;
+  justify-content: center;
+}
+
+#addMealsButton {
+  display: flex;
+  justify-content: center;
+}
+
+.deleteIconButton {
+  
 }
