--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -78,3 +78,12 @@ Grid
   flex-basis: 100%;
   max-width: 100%;
 }
+
+/* body {
+  background-image: url(./images/modConnor.jpg);
+  filter: grayscale(100%);
+  background-repeat: no-repeat;
+        background-size: cover;
+        margin-top:-30px;
+        min-Height: 100vh
+} */
